# the-beer-bar-api

./: Dockerfile  Makefile  README.md  fly.toml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
data/: inventory.json  orders.json
docs/decisions/: 0000-template.md  0001-clean-architecture.md
src/: main.py
src/adapters/: in_memory_inventory_repository.py  in_memory_orders_repository.py  simple_order_presenter.py  simple_payment_service.py
src/adapters/tests/: test_simple_payment_service.py
src/app/: dependencies.py  server.py
src/app/helpers/: errors.py
src/app/routes/v1/: inventory.py  orders.py
src/domain/: entities.py  objects.py
src/domain/ports/: inventory_repository.py  payment_service.py
src/domain/ports/order_presenter/: __init__.py  schema.py
src/domain/ports/orders_repository/: __init__.py  errors.py  schema.py
src/use_cases/create_order/: interactor.py  mapper.py  schema.py
src/use_cases/get_all_inventory/: interactor.py  schema.py
src/use_cases/get_order/: interactor.py
src/use_cases/get_orders/: interactor.py  schema.py
src/use_cases/pay_order/: errors.py  interactor.py  mapper.py  schema.py
src/use_cases/search_inventory/: interactor.py  schema.py
src/use_cases/update_inventory/: interactor.py  schema.py
src/use_cases/update_order/: interactor.py  mapper.py  schema.py
tests/: test_create_order.py
